# BoundaryValueProblem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  wrapper.h
Kernel/: functions.h  integrartor.h  thomas.h
Solvers/: solver_wrappers.h  task1.h  task3.h  task4.h  test_tasks.cpp
include/Interface/: wrapper.h
include/Kernel/: functions.h  integrator.h  thomas.h
include/Solvers/: solver_wrappers.h  task1.h  task2.h  task3.h  task4.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Interface/: wrapper.cpp
src/Kernel/: functions.cpp  integrator.cpp  thomas.cpp
src/Solvers/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
